
CHANGELOG for cope

This file lists all changes relevant for the user - especially all
API changes and new features recommended for most users. The log may
omit bug fixes.
The items are sorted inversely, i.e. lastest items are on top

--------------------------------------------------------------------------
* Media with default Content-Type or major Content-Type do restrict the
	CharSet of the StringField storing the Content-Type. You may need to adjust
	the persistent schema (adding new check constraints) and/or adjust your data.
* add pattern Range
* Editor provides LOGIN_PATH_INFO
* Editor provides isBordersEnabled()
	use  this instead of isLoggedIn() for triggering css import
* Interrupter from exedio-cope-util.jar is used
	- affects Dispatcher, Schedule, PasswordRecovery
* cope now depends on new project copeutil
	- add exedio-cope-util.jar where trove.jar is used as well
* add Schedule.enabled, adds new columns to schema, should be initialized with "true"
* changed url of content editor from contentEditorLogin.html or copeContentEditor.html to copeLiveEdit.html
* in contentEditor.css remove any styles related to contentEditorBar
* for content editor, Editor.writeHead must be called in html head
* renamed EditorPreview to Draft
* added SHAHash as a replacement for MD5Hash, which is no longer secure
* field for storing hashes uses algorithm for name,
	i.e. passwordHash becomes passwordMD5
	affects instrumented methods and persistent schema
* support for
	<taskdef resource="com/exedio/cope/instrument/ant.properties" classpath="lib/exedio-cope-instrument.jar" />
* Editor
	- put classes into separate package com.exedio.cope.editor
	- make Login a top-level interface and rename it to Session
* updated cops library to build.54, do get it from cops project now
* updated jspm library to build.14, added check.version target to getlib.xml
* added Query.emptyResult()